ontol-compiler/test-cases/error/rel/type_not_found.on
def foo ()
rel foo 'bar':
    baz // ERROR type not found
